--- a/conceptual02.html
+++ b/conceptual02.html
@@ -170,6 +170,42 @@
     </main>
 
     <footer>
+        <div class="footer-container">
+            <div class="agence">
+                <div class="footer-logo">
+                    <img class="logo" src="/asset/logo/logo.png" alt="">
+
+                </div>
+
+
+                <p>Auctor blandit dolorem primis eius odit soluta molestie? <br> Malesuada elementum aut doloremque
+                    labo.</p>
+            </div>
+
+            <div class="useful-links">
+                <h3>Useful-links</h3>
+                <p>About us</p>
+                <p>Careers</p>
+                <p>News & Articles</p>
+                <p>Ligal Notice</p>
+            </div>
+
+            <div class="supports">
+                <h3>Supports</h3>
+                <p>Help Center</p>
+                <p>Contact us</p>
+                <p>FAQ</p>
+                <p>Parent Community</p>
+            </div>
+
+            <div class="contact">
+                <h3>Contact</h3>
+                <p>Feel free to contact & reach us !!</p>
+                <p>3557 Derek Drive, Orlando, Florida</p>
+                <p>+1(456)657-887</p>
+                <p>info@domain.com</p>
+            </div>
+        </div>
 
     </footer>
 
